src/objects/Bar__c.object
<CustomObject>
    <description>Used only for unit testing</description>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>0</defaultValue>
        <label>B</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>0</defaultValue>
        <label>C</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foo__c</fullName>
        <label>Foo</label>
        <referenceTo>Foo__c</referenceTo>
        <relationshipLabel>Bars</relationshipLabel>
        <relationshipName>Bars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuxSumA__c</fullName>
        <label>QuxSumA</label>
        <summarizedField>Qux__c.A__c</summarizedField>
        <summaryForeignKey>Qux__c.Bar__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Bar</label>
    <nameField>
        <displayFormat>BAR-{0}</displayFormat>
        <label>Bar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>